# italian-gaap-kpi-analyzer

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.en.md  README.md  app.py  kpi_cee.spec  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
app_logic/: __init__.py  balance_sheet_config.py  calculator.py  constants.py  kpi_config.py  kpi_requirements_logic.py  mappings_config.py  validators.py
demo-screenshots/data/: Esempio_Bilancio_Analisi_KPI.xlsx
docs/: 01_installation.md  02_building_from_source.md  03_project_structure.md  04_contributing.md  README.md
src/: main.rs
src/app_logic/: balance_sheet_config.rs  calculator.rs  constants.rs  kpi_config.rs  kpi_requirements_logic.rs  mappings_config.rs  mod.rs  validators.rs
static/css/: custom.css
templates/: base.html  input.html  results.html  select_kpi.html
templates/partials/: _input_field.html
tests/: __init__.py  test_calculator.py
ui/: __init__.py  input_data_frame.py  results_frame.py  select_kpi_frame.py
