[project]
name = "kpi-cee"
version = "0.3.0"
description = "A Web application to calculate Key Performance Indicators (KPIs) from Italian GAAP-compliant financial statements."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "pytest>=8.0.0",
    "pyinstaller>=6.0.0",
]
