[project]
name = "italian-gaap-kpi-analyzer"
version = "0.3.3"
description = "A Web application to calculate Key Performance Indicators (KPIs) from Italian GAAP-compliant financial statements."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "flask-session>=0.8.0",
    "pytest>=8.0.0",
    "pyinstaller>=6.0.0",
]
